Report:  - More Rosetta references;  - References moved out of titles;  - typos;  - removed OpenJSCAD higher-order function text.

--- a/report.bib
+++ b/report.bib
@@ -155,6 +155,21 @@ author = {{de Oliveira Lopes}, Jos\'{e} Antonio Branquinho},
 title = {{Modern Programming for Generative Design Extended Abstract}},
 year = {2012}
 }
+@article{leitao2012programming,
+	title={Programming languages for generative design: A comparative study},
+	author={Leit{\~a}o, Ant{\'o}nio and Santos, Lu{\'\i}s and Lopes, Jos{\'e}},
+	journal={International Journal of Architectural Computing},
+	volume={10},
+	number={1},
+	pages={139--162},
+	year={2012},
+	publisher={Multi Science Publishing}
+}
+@article{lopes2011portable,
+	title={Portable generative design for CAD applications},
+	author={Lopes, Jos{\'e} and Leit{\~a}o, Ant{\'o}nio},
+	year={2011}
+}
 @incollection{aish2012designscript,
   title={DesignScript: origins, explanation, illustration},
   author={Aish, Robert},
