Report: Added table of contents. Removed appendix.

--- a/report.tex
+++ b/report.tex
@@ -47,6 +47,9 @@
 \begin{keywords}
 web browser, Generative Design, integrated development environment, javascript
 \end{keywords}
+
+\setcounter{tocdepth}{2}
+\tableofcontents
 %----------------------------------------------------
 %NAVintroduction
 \section{Introduction}
@@ -837,9 +840,9 @@ void draw() {
 %----------------------------------------------------
 %NAVappendix
 \newpage
-\appendix
-\section{Appendix}
-\label{sec:attachments}
+%\appendix
+%\section{Appendix}
+%\label{sec:attachments}
 
 %----------------------------------------------------
 %NAVacronyms
