Report: Corrections from group proof-reading.  - Added DynamoBIM reference.  - Abreviated "Figure" to "Fig.".  - javascript now is "Javascript" everywhere.  - Orthographic and grammatic corrections.

--- a/report.bib
+++ b/report.bib
@@ -242,3 +242,10 @@ year = {2012}
 	howpublished = "retrieved from \url{http://lighttable.com/}",
 	note = "[Online; accessed 25-November-2015]"
 }
+@misc{dynamo2015site,
+	author = "Autodesk",
+	title = "Dynamo {BIM}",
+	year = "2015",
+	howpublished = "retrieved from \url{http://dynamobim.com/}",
+	note = "[Online; accessed 25-November-2015]"
+}
