--- a/report.tex
+++ b/report.tex
@@ -12,7 +12,7 @@
 \usepackage{float}
 %%%%
 \usepackage[utf8]{inputenc}
-%%%% Declare that we're using utf8 encoding
+%%%% Declare that we are using utf8 encoding
 \usepackage{listings}
 %%%% Include package for listings
 
@@ -65,7 +65,7 @@ web browser, Generative Design, integrated development environment, Javascript
 %NAVintroduction
 \section{Introduction}
 	%Introduce the power of programming.
-	Programming is becoming an essential way of expressing ideas in a way a computer can understand them.
+	Programming is becoming an essential way of expressing ideas so that a computer can understand them.
 	Once a computer can understand an idea (or process) it can apply it as many times as we want.
 
 	Expressing ideas or processes in a way a computer understands requires us to specify every detail of what we have in mind (sometimes too much), which forces us to really understand what they are.
@@ -79,7 +79,7 @@ web browser, Generative Design, integrated development environment, Javascript
 	If he uses a specific \ac{api}, he will need its documentation for quick reference.
 	He may have to compile the program in order to run it.
 	The compiler might detect syntactical errors that have to be corrected.
-	If he notices that the program is misbehaving, he will have find the reason which normally involves starting the program and attaching a debugger to it.
+	If he notices that the program is misbehaving, he will have to find the reason which normally involves starting the program and attaching a debugger to it.
 	When he finds the reason, he will have to make corrections and test the program.
 	And so on and so forth.
 
@@ -87,8 +87,7 @@ web browser, Generative Design, integrated development environment, Javascript
 	All those small steps have to be learned and articulated by the programmer.
 	It is an inevitably complex activity.
 	And the programmer's productivity and enjoyment suffers from it.
-	There has to be some way of lifting some of the work from the programmer.
-	That is where \ac{ide}s come in.
+	There has to be some way of lifting some of the work from the programmer, and that is where \ac{ide}s come in.
 
 	\ac{ide}s bring together all the tools needed while programming and automates all its small steps.
 	They might do it so well that the programmer might forget that those steps still exist.
@@ -110,7 +109,7 @@ web browser, Generative Design, integrated development environment, Javascript
 	%IDEs dynamic languages.
 	\ac{ide}s for dynamic programming languages can go a step further in shortening the cycle between editing the program and seeing its effects.
 	They allow programmers to quickly run their programs and provide ways to interact with them like \ac{repl}s.
-	The programmer can now write his program and then start experimenting with it in the \ac{repl}, quickly testing some areas or quickly sketching new portions of the program.
+	The programmer can now write his program and then start experimenting with it in the \ac{repl}, quickly testing some areas or sketching new portions of the program.
 	All this without having to write a separate program and compiling both.
 	Dynamic languages themselves also play a part.
 	They start to blur the line between programming language and programming environment.
@@ -138,7 +137,7 @@ web browser, Generative Design, integrated development environment, Javascript
 	In their case it requires a direct correspondence between the program and the 3D geometry that it creates.
 	
 	Following the trend of using programming in their work, architects started using programming to generate the 3D models of the buildings they are designing. 
-	They use a process called \ac{gd}\cite{terzidis2003expressive,Maeda:2001:DN:559503}.
+	They use a process called \acl{gd}\cite{terzidis2003expressive,Maeda:2001:DN:559503}.
 	By using \ac{gd}, they can easily create variants of their designs by changing a small set of parameters. 
 	Those parameters are used by the computer to run the algorithm to generate an instance of their designs\cite{Santos20144}. 
 
@@ -150,7 +149,7 @@ web browser, Generative Design, integrated development environment, Javascript
 	Second, there are standalone programming environments like Processing\cite{reas2007processing} or Rosetta\cite{de2012modern}; the first is a programming environment for the visual arts and the second is an environment thought specifically for \ac{gd}. 
 	As they come from textual programming community, these do not provide direct manipulation as a primary tool.
 
-	Although these \ac{ide}s already enable architects to do \ac{gd} there is still room for improvement.
+	Although these \ac{ide}s already enable architects to do \ac{gd}, there is still room for improvement.
 	They present some work on freeing architects from being stuck with one of the well established \ac{cad} software packages or one of their plug-ins.
 	It is still possible to free them even further by allowing them to run their programs regardless of what computer they are using.
 
@@ -166,7 +165,7 @@ web browser, Generative Design, integrated development environment, Javascript
 	These applications tend to be more independent from the details of the machine where they are running.
 	They all share the same platform, the web browser.
 
-	While there are some web browser applications where \ac{gd} can be applied there is still room for improving its support.
+	While there are some web browser applications where \ac{gd} can be applied its support still needs to be improved.
 	As an example, OpenJSCAD lets programmers write and run programs that generate 3D objects and displays its results in an interactive 3D view.
 	It does not provide constant feedback to changes when writing the program.
 	The only way the programmer has to get feedback from the program is by explicitly running it.
@@ -174,25 +173,25 @@ web browser, Generative Design, integrated development environment, Javascript
 	We propose a web browser based \ac{gd} environment. 
 	Such environment will allow architects, or anyone interested in \ac{gd}, to edit \ac{gd} programs and visualize their results while not requiring any installation. 
 	It will thus allow them to do \ac{gd} on any computer that has a modern browser. 
-	Not being tied to a workstation will allow them to work closer to their clients and to more swiftly change their designs to accommodate the client's needs.
+	Not being tied to a workstation allows designers to work closer to their clients and to quickly change their designs to accommodate the client's needs.
 
 %----------------------------------------------------
 %NAVobjectives
 \subsection{Objectives}
+	%TODO Redo Objectives section
 	The aim of this project is to provide architects and designers interested in creating 3D models with an environment that fosters the Generative Design approach while being accessible wherever there is a web browser and an internet connection.
 
 	%Why does it need to be accessible wherever the architect is?
-	Architects imagine buildings and will have to move their ideas outside of their heads wherever they are; if they do not, they might forget them forever. 
+	Architects imagine buildings and they have to immediately apply their ideas so they do not forget them.
 	We have to provide means to translate ideas and it has to be accessible wherever they are.
 
-	How can we provide means to translate ideas? We make them translate the idea into a program, we encourage them to use Generative Design.
+	How can we provide means to translate ideas? We suggest architects to translate the idea into a program, encouraging them to use Generative Design.
 
-	When architects look for an environment to program they aren't looking for a software development \ac{ide} like Eclipse or Visual Studio. 
-	They only need an environment where they can write their program and see the results. 
-	All they want is accessible programming languages and environments.
+	When architects look for an environment to program they are not looking for a software development \ac{ide} like Eclipse or Visual Studio. 
+	They only need accessible programming languages and environments where they can write their programs and then see the results.
 
-	There are many well established tools that architects use to translate their ideas; 
-	if we're going to come up with a solution that can rival them then \textbf{it must be as easy to try out as possible}; 
+	There are many well established tools that architects use to translate their ideas \textbf{such as Processing, Grasshopper, Dynamo, Rosetta}; 
+	if we are going to come up with a solution that can rival them then \textbf{it must be as easy to try out as possible}; 
 	and \textbf{be able to integrate with them}.
 	%Should I say how it integrates with them? Which is by offering the possibility of producing effects on their current tools, more specifically the CADs they use.
 
@@ -220,7 +219,7 @@ web browser, Generative Design, integrated development environment, Javascript
 	The \ac{ide} connects all the tools together so that developers do not have to worry about it and thus decreases the difficulty of using them.
 	Overall \ac{ide}s decrease the complexity of developing large software.
 
-	What \ac{ide}s do not do is to decrease the amount of knowledge that their users have to have about software development.
+	What \ac{ide}s do not do is decreasing the amount of knowledge that their users need to have about software development.
 	The tools they provide are still the same that developers would use.
 	This is a problem that new software developers face and have to cope with.
 	Even with this problem, the benefit software developers get when they know how to use \ac{ide}s outweighs it and so \ac{ide}s are popular among software developers.
@@ -244,6 +243,7 @@ web browser, Generative Design, integrated development environment, Javascript
 	
 %Domain-specific IDEs.
 \subsubsection{Impromptu.}
+	%TODO Redo Impromptu section
 	Impromptu\cite{sorensen2005impromptu,sorensen2010programming}(Fig. \ref{fig:ex:impromptu}) is a programming environment developed to explore manipulation of musical structure in live performance; an \ac{ide} for musicians and sound artists.
 	
 	%What is live-performance?
@@ -257,7 +257,7 @@ web browser, Generative Design, integrated development environment, Javascript
 	The usage of Impromptu revolves around using its \ac{ide} to send code to the Scheme interpreter. 
 	The code can schedule audio to be played later, schedule functions to run later, define or redefine functions and ``variables''. 
 	One can use Impromptu to incrementally build an algorithm that produces music. 
-	He writes small parts of the algorithm, sends them to the interpreter and then uses those parts to build bigger parts. 
+	The programmer writes small parts of the algorithm, sends them to the interpreter and then uses those parts to build bigger parts. 
 	If not satisfied with a part, he can change its code and send it again to the interpreter.
 	
 	\begin{figure}
@@ -292,7 +292,7 @@ web browser, Generative Design, integrated development environment, Javascript
 	IPython was decomposed into ``execution kernels'', a communication protocol and several front-ends. 
 	As each type of component has a defined interface it is possible to implement new specialized components (a new front-end or a new execution kernel) that will integrate with those already implemented.
 	
-	%Why is it important? I can't imagine designers using it.
+	%Why is it important? I cannot imagine designers using it.
 	The style of producing notebooks in IPython is one that mixes programming, writing and exploring. 
 	This style is also part of a designer's processes. 
 	Like a scientist, the designer also has to do exploration of ideas (design ideas in his case), reach conclusions (finalized designs) and share his work with others (fellow designers, clients, friends, blog readers). 
@@ -307,9 +307,9 @@ web browser, Generative Design, integrated development environment, Javascript
 	Processing makes it easy to start writing programs that produce visual output. 
 	The only step required to start using it is the download and installation of one of its releases. 
 	After the installation, one can start the \ac{pde} and write a new program, a \emph{sketch} as it is referred within Processing. 
-	Its website also provides a set of tutorials to help users learn how to use it.
+	Its website also provides a set of tutorials and documentation to help users learn how to use it.
 	
-	Being aimed at producing visual output and given its success by the size of its community, it makes sense to analyze it.
+	We decided to analyze Processing due to its use in producing visual output (both 2D and 3D) and to its success.
 	
 	We start by analyzing its programming language, then move to its development environment and finish by evaluating it against \emph{our learnable programming principles}.
 	
@@ -446,7 +446,7 @@ void draw() {
 	DesignScript was also integrated into Autodesk AutoCAD. 
 	A standalone node-based DesignScript editor was also made, it was called DesignScript Studio.
 	
-	%It is a multiple paradigm language supporting both imperative and associative programming. At any given point in a DesignSript program, the execution is either being controlled imperatively(following instructions step-by-step) or associatively(propagating changes in a dependency graph). It also uses object-oriented concepts; entities are objects with properties and methods; each object has it's own properties and methods;
+	%It is a multiple paradigm language supporting both imperative and associative programming. At any given point in a DesignSript program, the execution is either being controlled imperatively(following instructions step-by-step) or associatively(propagating changes in a dependency graph). It also uses object-oriented concepts; entities are objects with properties and methods; each object has its own properties and methods;
 	%
 	%One way DesignScript tries to succeed is to integrate various ways of modeling into the design process. These various ways of modeling are direct-manipulation mode present in any 3d modeling application, the associative mode present in many visual programming environments and the 
 
@@ -499,10 +499,10 @@ void draw() {
 		\item Modern and pedagogic system
 	\end{itemize}
 	
-	It enables this by providing several ``front-end'' programming languages and several ``back-ends'' which take the results of the program. 
-	The programs written in a ``front-end'' language are compiled into an intermediate language which then translates its semantics to the selected ``back-end''\cite{lopes2011portable}.
+	It enables this by providing several front-end programming languages and several back-ends which take the results of the program. 
+	The programs written in a front-end language are compiled into an intermediate language which then translates its semantics to the selected back-end\cite{lopes2011portable}.
 	
-	Some ``front-ends'' supported by Rosetta are AutoLisp, Javascript, Racket and Python; some of the supported ``back-ends'' include Autodesk AutoCAD, Autodesk Revit, Sketchup, Rhinoceros 3D, TikZ and OpenGL.
+	Some front-ends supported by Rosetta are AutoLisp, Javascript, Racket and Python; some of the supported back-ends include Autodesk AutoCAD, Autodesk Revit, Sketchup, Rhinoceros 3D, TikZ and OpenGL.
 	
 	%Rosetta has been extensively used for teaching programming to architecture students at \ac{ist}. 
 
@@ -521,7 +521,7 @@ void draw() {
 	It should make these things easy to do, after all these can be done by the programmer alone if he is willing to.
 
 \subsection{Moving to the Web}
-	Web browsers didn't start as feature-rich and performant as they are now.
+	Web browsers did not start as feature-rich and performant as they are now.
 	They started as hypertext browsers that made it easier to read hypertext.
 	They could display images and text and could jump from page to page by following hyperlinks or following URLs.
 	Only with the development of new features and the demand for more performance and features did they slowly get into the shape they are now.
@@ -583,7 +583,7 @@ void draw() {
 	%LightTable "function navigation"
 	LightTable also helps navigating Clojure code bases.
 	In Clojure functions are defined inside namespaces and all Clojure definitions (functions, variables, macros) are stored in text files. 
-	Navigating among definitions and the current namespace structure shouldn't get in the way of editing code. 
+	Navigating among definitions and the current namespace structure should not get in the way of editing code. 
 	To make editing easier, LightTable provides a \emph{namespace browser} that eases finding functions and a \emph{code document} where functions can be added for editing without moving them out of their namespace or displaying entire files where they are defined. 
 	Fig. \ref{fig:lt:clojure:table} shows an experiment where these two are used.
 
@@ -597,7 +597,7 @@ void draw() {
 	%LightTable "variable substitution"
 	One interesting functionality of LightTable is its ability to show data flow in a function call. 
 	Since the main purpose of a function is to transform its input data into its output data, it helps to see what happens to the data on each step of the function. 
-	To achieve this LightTable overlays variable values and return values, respectively, on each variable occurrence and expression of the function. 
+	To achieve this, LightTable overlays variable values and return values, respectively, on each variable occurrence and expression of the function. 
 	Fig. \ref{fig:lt:val:overlay} shows an example of such functionality. 
 	This functionality is part of LightTable's \emph{instarepl}.
 
@@ -630,7 +630,7 @@ void draw() {
 
 	OpenJSCAD's language supports two syntaxes, one based on message passing (or method invoking) and one based on calling functions.
 	Both of these syntaxes are already present in Javascript. 
-	Many operations provided produce a new object and don't change their parameters. 
+	Many operations provided produce a new object and do not change their parameters. 
 	This allows us to follow a functional programming paradigm and since there are fewer side-effects to know about it is easier to understand a program written using them.
 
 	A problem that can arise while writing and testing jscad programs is that there is no help on getting the parameters for operations right.
@@ -639,7 +639,7 @@ void draw() {
 	Currently the only help available is OpenJSCAD's documentation (a tour on its functionality), the online community around OpenJSCAD and, since Javascript is the core of the language, web browsers' Javascript developer tools.
 
 	There is also a problem using the function call syntax, namely its readability.
-	It may not provide the flexibility needed for arranging the code in a easily readable manner. 
+	The way function calls are written may not provide the flexibility needed for arranging the code in a readable manner. 
 	This is especially true if a simple text editor is used. 
 	%While assigning intermediary results to variables can help ``unnesting'' but it is sometimes inconvenient. 
 	On top of this, OpenJSCAD is mainly just Javascript and like so Javascript's strange behavior about semicolon insertion is carried over. 
@@ -648,7 +648,7 @@ void draw() {
 	%It enables the programmer to specify parameters of functions as other functions 
 	%Examples of this advantage can be found in \textbf{leitao abstract geometry n high order programming}.
 
-	%For example, one can have a function describing how to make a building which receives functions describing how  as parameters.
+	%For example, one can have a function describing how to make a building which receives functions describing how parts like balconies and windows are made as parameters.
 
 	%Some functions in OpenJSCAD and their parameters.
 	%function parameters result 
@@ -663,27 +663,27 @@ void draw() {
 \subsection{Decomposing the problem}
 	To better understand how to solve the problem of helping to make programs for GD, we decomposed it into several parts that can be more or less thought about and solved separately.
 	
-	\paragraph{The programming language}
+	\paragraph{The programming language.}
 	One part that has to be set is \textbf{what is the language} used to make the programs.
 	This aspect involves things like what control flow mechanisms are available, whether side-effects exist or not, and what is the syntax for each component of the language.
 	It deals with how the language works.
 
-	\paragraph{Help when writing and reading}
+	\paragraph{Help when writing and reading.}
 	Another part is the \textbf{amount of help, documentation or reaction} the system has to support the user while he is thinking about and making the program.
 	In the light of \cite{victor2012learnable}, the system should have good answers to the questions proposed on what is a good programming environment.
 
-	\paragraph{Primitive operations}
+	\paragraph{Primitive operations.}
 	Another part is the \textbf{implementation of primitives} of the language like constructive solid geometry, lofts, sweeps and many other 3D modeling operations.
-	Without them architects won't be able to make any Generative Design.
+	Without them architects will not be able to make any Generative Design.
 	One thing to keep in mind is that these operations have to be translated into other tools used in architecture.
 
-	\paragraph{Documenting programs}
+	\paragraph{Documenting programs.}
 	Other part is how the system lets users \textbf{document their programs}. 
 	It is normal to forget how some part of the program works and so documentation is needed (or anything that is faster to understand than interpreting the program manually).
 	The system could support having drawings juxtaposed to the program in addition to previews of results like those present in DesignScript Studio, Dynamo and Grasshopper. 
 	It will also be useful to look at how current programming languages are usually documented. 
 
-	\paragraph{Persisting programs}
+	\paragraph{Persisting programs.}
 	Other part is the \textbf{persistence of programs} between usage sessions, in cases the system crashes or even across multiple devices.
 	In case of persistence between sessions, the user can close the browser or the tab at any moment, it would be useful to keep record of the current program in some way. 
 	In case of persistence in case of crashes, if the user program itself crashed the page it should not be executed immediately to allow its retrieval or edition (as it could crash the page again). 
@@ -691,7 +691,7 @@ void draw() {
 	These become useful as the user makes changes and wants to look back in time for some reason. 
 	Maybe because he did not anticipate the need for something he deleted or maybe because he wants to see how his programs have progressed.
 
-	\paragraph{Passing results on}
+	\paragraph{Passing results on.}
 	Other part is the way programs can be \textbf{applied to other modeling applications} used by architects.
 	Without a way to do this the system is rendered useless as it can hardly be integrated into the architect's normal process. 
 	Rosetta uses the concept of selecting a back-end, a specific interface to a modeling application. 
@@ -740,7 +740,7 @@ void draw() {
 	To evaluate an \ac{ide} for \ac{gd} we will have to look at three different areas:
 	its performance, its user experience or usability and its Generative Design capability.
 	
-	\paragraph{User experience / Usability}
+	\paragraph{User experience / Usability.}
 	For the system to be useful its users have to be able to use it.
 	To assess that this is true we will do user testing.
 	
@@ -749,17 +749,17 @@ void draw() {
 	
 	Only the editing environment will be tested this way since it is the only component that is used directly by architects.
 	
-	\paragraph{Generative Design capability}
+	\paragraph{Generative Design capability.}
 	The variety of results that can be made using the system is also important for its evaluation.
 	The more \ac{gd} examples it can produce the better it is suited for use in a real-world scenario.
 	A way to show how much variety of results it can make is to describe several examples that give glimpses of that variety.
 	
-	\paragraph{Performance}
+	\paragraph{Performance.}
 	The performance will have to be evaluated but more importantly its perceived performance, or responsiveness, will also be evaluated.
 	As the \ac{ide} will be used by people, it is important that the interface responds quickly;
 	in this case it will matter how much time it takes to see the changes made to a program appear on a view of its results.
 	
-	Performance will be evaluated by benchmarks to compare our solution against other \ac{gd} \ac{ide}s and also by measuring the frame rate of the viewer.
+	Performance will be evaluated by benchmarks to compare our solution with other \ac{gd} \ac{ide}s and also by measuring the frame rate of the viewer.
 	The first measures raw performance and the second measures responsiveness.
 
 \subsection{Proof-of-concept Prototype}
@@ -828,8 +828,8 @@ void draw() {
 \section{Conclusions}
 	People making \ac{gd} need an \ac{ide} that is different from those used in software development. 
 	Most of the time their programming projects are much simpler than the typical software development project.
-	They also don't have as much programming knowledge as software developers.
-	With this in mind it becomes clear that software development \ac{ide}s don't fit their needs.
+	They also do not have as much programming knowledge as software developers.
+	With this in mind it becomes clear that software development \ac{ide}s do not fit their needs.
 	
 	\ac{ide}s like Impromptu, IPython, Processing, DesignScript and Rosetta are examples of \ac{ide}s for programming purposes other than software development.
 	They drop most of the functionality from software development \ac{ide}s (like Visual Studio or Eclipse) keeping only what is useful for beginners and add new functionality that will help them while programming for their specific purposes.
@@ -844,7 +844,7 @@ void draw() {
 	To have a working \ac{ide} for \ac{gd} in the browser at least two components need to exist, a source code editor and a visualizer.
 	This way people will be able to make programs and see their results with just a web browser.
 	
-	Special care will have to be taken to make sure that the user experience is good. 
+	Making the user experience good will require special care.
 	A particular element in making it is the overall responsiveness of the user interface and other is the amount of primitives available for \ac{gd}.
 	
 	In the future, a better solution for storing the programs users make and for running them in \ac{cad}s may be explored.
