Report: Advisor revision - still incomplete.  - Rewritten most of abstract.  - Rewritten most of introduction. Not mentioning dynamic languages.  - Cited WebGL specification.  - Related Work straighforward changes.

--- a/report.bib
+++ b/report.bib
@@ -249,3 +249,9 @@ year = {2012}
 	howpublished = "retrieved from \url{http://dynamobim.com/}",
 	note = "[Online; accessed 25-November-2015]"
 }
+@article{marrin2011webgl,
+	title={Webgl specification},
+	author={Marrin, Chris},
+	journal={Khronos WebGL Working Group},
+	year={2011}
+}
