--- a/report.tex
+++ b/report.tex
@@ -45,18 +45,23 @@
 %----------------------------------------------------
 %NAVabstract
 \begin{abstract}
-	Web technologies now allow distributed applications to be accessible without having to install anything more than a web browser.
-	Apart from the features from desktop applications, web applications allow people to communicate and collaborate, and also untie them from any particular computer.
-	With modern web browsers, interfaces are not limited to server generated web pages;
-	they are now rivals of native desktop interfaces.
-	\ac{gd} is in need of one such web application, an \ac{ide} in this case.
+	User interfaces can be built using web pages.
+	With modern web standards they are no longer limited to server-generated web pages, they can be as flexible as desktop user interfaces.
+	As they are web pages, this also means that they can be used in any computer connected to the internet.
 	
-	In this report we will look at examples of both native and web applications and will use them as a basis for proposing a web based \ac{ide} for \ac{gd}.
+	With \ac{gd} architects use algorithms to describe their designs and leave the work of generating concrete instances to the computer.
+	It is extremely helpful when the design has plenty of repetition and it is necessary to explore variations.
+	The development of \ac{gd} designs is greatly simplified by \acp{ide} such as Dynamo or Rosetta that provide a framework for writing programs that represent the design.
+
+	Unfortunately, these \acp{ide} are only available in the computers where they were installed and for specific \acp{os}.
+	Web-based applications do not suffer as much from this as they are developed for web browsers that run in most \acp{os}.
+
+	In this report we will look at examples of both desktop and web applications and will use them as a basis for proposing a web-based \ac{ide} for \ac{gd}.
 \end{abstract}
 %----------------------------------------------------
 %NAVkeywords
 \begin{keywords}
-web browser, Generative Design, integrated development environment, Javascript
+web application, Generative Design, integrated development environment
 \end{keywords}
 
 \tableofcontents
@@ -65,62 +70,43 @@ web browser, Generative Design, integrated development environment, Javascript
 %NAVintroduction
 \section{Introduction}
 	%Introduce the power of programming.
-	Programming is becoming an essential way of expressing ideas so that a computer can understand them.
-	Once a computer can understand an idea (or process) it can apply it as many times as we want.
-
-	Expressing ideas or processes in a way a computer understands requires us to specify every detail of what we have in mind (sometimes too much), which forces us to really understand what they are.
-
-	Many people have understood the power that comes from having a computer (or machine) doing the bulk of the repetitive work and so have adopted programming as a new tool.
+	Many people have understood the power that comes from having a computer (or machine) doing the repetitive work and like so have adopted programming as a new tool.
 
 	%Introduce the need for IDEs. Introduce the demand for IDEs.
-	Still, programming requires plenty of discipline from the programmer.
+	Expressing ideas or processes as programs requires the programmer to specify every detail of what he has in mind (sometimes too much detail), which forces him to really understand what they are.
+	This is only possible with plenty of discipline from the programmer.
 	He has to write the program in a programming language.
 	He has to store it following a specific file structure.
-	If he uses a specific \ac{api}, he will need its documentation for quick reference.
+	If he uses an \ac{api}, he will need its documentation for quick reference.
 	He may have to compile the program in order to run it.
 	The compiler might detect syntactical errors that have to be corrected.
-	If he notices that the program is misbehaving, he will have to find the reason which normally involves starting the program and attaching a debugger to it.
+	If he notices that the program is misbehaving, he will have to find the reason, which normally involves starting the program and attaching a debugger to it.
 	When he finds the reason, he will have to make corrections and test the program.
 	And so on and so forth.
 
-	All of this demands great time and effort from the programmer.
-	All those small steps have to be learned and articulated by the programmer.
-	It is an inevitably complex activity.
-	And the programmer's productivity and enjoyment suffers from it.
-	There has to be some way of lifting some of the work from the programmer, and that is where \ac{ide}s come in.
+	All of this demands great time and effort from the programmer and all those small steps have to be learned and articulated by the programmer.
+	It is an inevitably complex activity and the programmer's productivity and enjoyment suffers from it.
+	This suggests that we should find a way of lifting some of the work from the programmer, and that is where \acp{ide} come in.
 
-	\ac{ide}s bring together all the tools needed while programming and automates all its small steps.
+	\acp{ide} bring together all the tools needed while programming and automates all its small steps.
 	They might do it so well that the programmer might forget that those steps still exist.
 	We can imagine that novice programmers using these environments would simply be unaware of them.
 	Programmers still have to write, run and debug their programs but they do so without losing time performing all those steps.
-	And so \ac{ide}s have become essential to programming.
+	This has made \acp{ide} essential to the programming activity.
 	
 	%Go from software production IDEs to architecture specific IDEs.
-	%Software development -> dynamic languages -> domain specific -> architecture specific
+	%Software development -> domain specific -> architecture specific
 	There are \ac{ide}s dedicated to supporting software production, like Eclipse\cite{eclipse2007eclipse} and Visual Studio\cite{mvs2002mvs}.
-	These \ac{ide}s support many programming languages and provide many tools needed for software production.
+	These \ac{ide}s support several programming languages and provide many tools needed for software production.
 	They help programmers navigate big software projects and let them configure complex building processes.
 	They also help them organizing the work on their software projects.
-	They are good for large scale software projects but not as good for smaller projects such as making prototypes or merging programs together.
-	They still require a lot of configuration before the programmer can start using them to make a program.
-	Again, a programmer is being burdened with small steps that could be automated.
-	This is where dynamic languages and their \ac{ide}s can be useful.
-
-	%IDEs dynamic languages.
-	\ac{ide}s for dynamic programming languages can go a step further in shortening the cycle between editing the program and seeing its effects.
-	They allow programmers to quickly run their programs and provide ways to interact with them like \ac{repl}s.
-	The programmer can now write his program and then start experimenting with it in the \ac{repl}, quickly testing some areas or sketching new portions of the program.
-	All this without having to write a separate program and compiling both.
-	Dynamic languages themselves also play a part.
-	They start to blur the line between programming language and programming environment.
-	Being less strict and providing higher level concepts allows them to free programmers from having to state every detail of the program.
-	They allow those missing details to be implicit.
-
+	
+	What software production \acp{ide} do not do is help non-programmers use programming for specific domains.
+	They are intended to be general purpose and to be used by professional programmers and like so have complex interfaces and assume users know how to program.
+	If someone wants to make a small program to solve his problem he will want something more specific that is not as complicated to use.
+	
 	%IDEs domain specific.
-	\ac{ide}s for dynamic languages are better but they are still too general.
-	They stop at helping to program without covering problems specific to the bigger activities of their users, what they actually want to program.
-	They do not automate the repetitive steps present in activities where programming is used as a tool.
-	\ac{ide}s like IPython and Impromptu are another step further.
+	IPython and Impromptu are \acp{ide} that are intended for two specific domains.
 	IPython helps scientists by providing them what is relevant to their work, such as automating gathering of data, transforming and visualizing it in order to draw conclusions.
 	It integrates taking notes and programming.
 	They no longer have to join the pieces of information into a single space since it is already done by the environment.
@@ -132,77 +118,56 @@ web browser, Generative Design, integrated development environment, Javascript
 	The results and ways to visualize (or hear) them are integrated into the environment.
 
 	%IDEs architecture specific.
-	As with scientists and musicians, architects can benefit from having \ac{ide}s specific to their programming needs.
-	They can also benefit from automating small steps and integrating all tools needed to making their programs.
-	In their case it requires a direct correspondence between the program and the 3D geometry that it creates.
-	
 	Following the trend of using programming in their work, architects started using programming to generate the 3D models of the buildings they are designing. 
 	They use a process called \acl{gd}\cite{terzidis2003expressive,Maeda:2001:DN:559503}.
-	By using \ac{gd}, they can easily create variants of their designs by changing a small set of parameters. 
-	Those parameters are used by the computer to run the algorithm to generate an instance of their designs\cite{Santos20144}. 
+	While using \ac{gd}, they develop algorithms that describe how a 3D model of a design is built; when parameterized, these algorithms can easily create different versions of the design; this in turn enables architects to search for a version that satisfies them.
+	Writing the algorithms as computer programs is the normal way of doing \ac{gd} as manually applying them is impractical.
+	
+	As with scientists and musicians, architects can benefit from having \acp{ide} specific to their programming needs.
+	In their case, having a way to visualize the 3D models generated by their programs is the minimum required feature.
 
-	There are several \ac{ide}s that make it easier to program for \ac{gd}. 
-	%\footnote{In case of Generative Design it is a necessity to have a dedicated programming environment as architects may not be willing to program if it is too hard, too unknown.
-	%After all, their work is not developing software, they will only program if it is a easier alternative for designing a building.}
-	First, many \ac{cad} software packages used by architects have support for \ac{gd} provided by a plug-in or a set of plug-ins.
-	In these software packages \ac{gd} is not the main way to model.
-	Second, there are standalone programming environments like Processing\cite{reas2007processing} or Rosetta\cite{de2012modern}; the first is a programming environment for the visual arts and the second is an environment thought specifically for \ac{gd}. 
-	As they come from textual programming community, these do not provide direct manipulation as a primary tool.
+	There are several \acp{ide} that make it easier to program for \ac{gd}. 
+	First, some \ac{cad} software packages used by architects have support for \ac{gd} provided by a plug-in or a set of plug-ins.
+	Second, there are standalone programming environments like Processing\cite{reas2007processing} or Rosetta\cite{de2012modern}; the first is a programming environment for the visual arts and the second is an environment thought specifically for \ac{gd}.
 
-	Although these \ac{ide}s already enable architects to do \ac{gd}, there is still room for improvement.
-	They present some work on freeing architects from being stuck with one of the well established \ac{cad} software packages or one of their plug-ins.
-	It is still possible to free them even further by allowing them to run their programs regardless of what computer they are using.
+	One thing that can improve \acp{ide} for \ac{gd} is the possibility of working in any computer with any \ac{os}.
+	This suggests a web-based \ac{ide}, a web page, that supports visualization of the designs implemented by the designer or architect.
+	With a web-based \ac{ide}, architects only have to access its web page with a web browser and no longer have to worry about the computer or its \ac{os}.
 
-	One possibility for allowing this is to move the environment to the cloud and the web browser.
-
-	%Architects also need to be independent from the CADs they are using.
-	%It is often the case that they become experts in just one software.
-	%They also become very dependent on that software.
-
-	Web browser applications with heavy use of 3D graphics are now becoming common.
-	There are 3D modeling applications, game editors and procedural 3D modeling applications.
-	\footnote{Some examples are Clara.io\cite{houston2013clara}, a 3D modeling application, GooCreate\cite{goocreate2015site}, a game engine paired with a game editor, and OpenJSCAD\cite{openjscad2015site}, a procedural 3D modeling language with a browser based program editor.}
-	These applications tend to be more independent from the details of the machine where they are running.
+	Web pages with 3D graphics are becoming common now that hardware acceleration is possible thanks to WebGL\cite{marrin2011webgl}.
+	There are 3D modeling applications, game editors and procedural 3D modeling applications such as Clara.io\cite{houston2013clara}, a 3D modeling application, GooCreate\cite{goocreate2015site}, a game engine paired with a game editor, and OpenJSCAD\cite{openjscad2015site}, a procedural 3D modeling language with a browser based program editor.
+	These applications are more independent from the details of the computer where they are running.
 	They all share the same platform, the web browser.
 
-	While there are some web browser applications where \ac{gd} can be applied its support still needs to be improved.
-	As an example, OpenJSCAD lets programmers write and run programs that generate 3D objects and displays its results in an interactive 3D view.
-	It does not provide constant feedback to changes when writing the program.
-	The only way the programmer has to get feedback from the program is by explicitly running it.
+	While there are web pages where \ac{gd} can be applied its support is primitive.
+	As an example, OpenJSCAD (the best of the examples for \ac{gd}) lets programmers write and run programs that generate 3D objects and displays its results in a 3D view with a movable camera.
+	Unfortunately, it does not provide constant feedback to changes to the program.
+	When the programmer makes changes to his program the only way he has to get feedback from the program is by explicitly running it.
 
-	We propose a web browser based \ac{gd} environment. 
+	We propose a web-based \ac{ide} for \ac{gd}. 
 	Such environment will allow architects, or anyone interested in \ac{gd}, to edit \ac{gd} programs and visualize their results while not requiring any installation. 
-	It will thus allow them to do \ac{gd} on any computer that has a modern browser. 
-	Not being tied to a workstation allows designers to work closer to their clients and to quickly change their designs to accommodate the client's needs.
-
+	It will thus allow them to do \ac{gd} on any computer that has a web browser independently from its \ac{os}.
+	
+	
 %----------------------------------------------------
 %NAVobjectives
 \subsection{Objectives}
-	%TODO Redo Objectives section
-	The aim of this project is to provide architects and designers interested in creating 3D models with an environment that fosters the Generative Design approach while being accessible wherever there is a web browser and an internet connection.
+	The aim of this project is to provide architects and designers interested in creating 3D models with an environment that fosters the \acl{gd} approach while being accessible wherever there is a web browser and an internet connection.
 
 	%Why does it need to be accessible wherever the architect is?
 	Architects imagine buildings and they have to immediately apply their ideas so they do not forget them.
 	We have to provide means to translate ideas and it has to be accessible wherever they are.
 
-	How can we provide means to translate ideas? We suggest architects to translate the idea into a program, encouraging them to use Generative Design.
+	When architects look for an environment to program they are not looking for a software development \ac{ide} like Eclipse or Visual Studio because, as explained before, these are excessively complex \acp{ide}, aimed for professional programmers using industrial programming languages.
+	On the contrary, what architects look for in an \ac{ide} is a simple interface that considerably simplifies the development of \ac{gd} programs written in the dynamic languages typically used in \ac{gd}. 
 
-	When architects look for an environment to program they are not looking for a software development \ac{ide} like Eclipse or Visual Studio. 
-	They only need accessible programming languages and environments where they can write their programs and then see the results.
-
-	There are many well established tools that architects use to translate their ideas \textbf{such as Processing, Grasshopper, Dynamo, Rosetta}; 
-	if we are going to come up with a solution that can rival them then \textbf{it must be as easy to try out as possible}; 
-	and \textbf{be able to integrate with them}.
-	%Should I say how it integrates with them? Which is by offering the possibility of producing effects on their current tools, more specifically the CADs they use.
-
-	Summing up, the result of this project should:
+	The result of this project should:
 	\begin{enumerate}
-		\item Be accessible wherever the architect is working; \label{obj:access}
-		\item Support the Generative Design approach; \label{obj:gen-design}
-		\item Be as easy to try out as possible -- without a middle step to install it; \label{obj:no-install}
-		\item Integrate with the tools that architects and designers already use.\label{obj:inter-op}
+		\item Support the \acl{gd} approach.
+		\item Be implemented as a web page.
+		\item Be available from the internet.
 	\end{enumerate}
-
+	
 
 %----------------------------------------------------
 %NAVrelatedwork
@@ -229,17 +194,17 @@ web browser, Generative Design, integrated development environment, Javascript
 	In all likelihood they will be scared off by the sheer amount of buttons and menus the \ac{ide} has.
 	The amount of time they would need to learn how to use it would be too much and they would rather do something else.
 	All those buttons and menus would act as a barrier; a barrier that would obscure the power hidden behind it.
-	They need different \ac{ide}s with tools adapted to their concerns.
+	In order to be able to effectively use an \ac{ide}, architects need different \acp{ide} with tools adapted to their concerns.
 	The tools these \ac{ide}s should provide do not have to touch so many software development concerns and instead should focus on the specific needs of the area.
 
 	In \ac{gd}, for example, displaying 3D models is an absolute necessity as 3D models are a great part of the final product of a program.
 	\ac{ide}s like DynamoBIM\cite{dynamo2015site} and Rosetta already provide this and have gone further.
 	Developing a new \ac{ide} for \ac{gd} requires us to study such \ac{ide}s.
-	It is also helpful to look at other \ac{ide}s that focus on concerns of people from yet other areas that still share a certain lack of knowledge of software development.
+	It is also helpful to look at other \ac{ide}s that focus on concerns of people from yet other areas that still share a lack of knowledge of software development.
 	Tech savvy musicians use computers in live performances as their instruments and take advantage of their programmability through \ac{ide}s like Impromptu.
 	Designers and visual artists use Processing and its \ac{ide}, the \ac{pde}, to program for their projects.
 	Others can use IPython to document and inform their experiments by using Python's many libraries.
-	All of these provide inspiration for an \ac{ide} for \ac{gd}.
+	All of these provide inspiration for an \ac{ide} for \ac{gd} and deserve to be further discussed.
 	
 %Domain-specific IDEs.
 \subsubsection{Impromptu.}
@@ -273,7 +238,7 @@ web browser, Generative Design, integrated development environment, Javascript
 	
 \subsubsection{IPython.}
 	IPython\cite{PER-GRA:2007} is a notepad-like environment (Fig. \ref{fig:ipython:notebook}) directed towards providing better, more straightforward scientific computing. \emph{It makes me remember Mathematica's notebooks.} As its name suggests, IPython's main programming language is Python. 
-	While Python is its main programming language, other popular programming languages can be used in IPython, particularly those popular in the scientific community like R, Julia. \footnote{More language kernels can be found in IPython's github page: https://github.com/ipython/ipython/wiki/IPython-kernels-for-other-languages}
+	While Python is its main programming language, other popular programming languages can be used in IPython, particularly those popular in the scientific community like R, or Julia\footnote{More language kernels can be found in IPython's github page: https://github.com/ipython/ipython/wiki/IPython-kernels-for-other-languages}.
 	
 	\begin{figure}
 		\centering
@@ -286,7 +251,7 @@ web browser, Generative Design, integrated development environment, Javascript
 	Instead of publishing a PDF or making a blog post the authors write whole publications as IPython notebooks which then are shared and thus allow everyone to run their source code. 
 	Having access to a working copy of the notebook, one can also experiment with it to better understand it, form own conclusions or find errors.
 	
-	Since it aims to be ``A tool for managing the entire lifecycle of a scientific idea''\footnote{Quoting Fernando Perez in his Scipy 2012 Keynote.}, it also provides parallel computation primitives.
+	%Since it aims to be ``A tool for managing the entire lifecycle of a scientific idea''\footnote{Quoting Fernando Perez in his Scipy 2012 Keynote.}, it also provides parallel computation primitives.
 	
 	%IPython architecture
 	IPython was decomposed into ``execution kernels'', a communication protocol and several front-ends. 
@@ -296,8 +261,7 @@ web browser, Generative Design, integrated development environment, Javascript
 	The style of producing notebooks in IPython is one that mixes programming, writing and exploring. 
 	This style is also part of a designer's processes. 
 	Like a scientist, the designer also has to do exploration of ideas (design ideas in his case), reach conclusions (finalized designs) and share his work with others (fellow designers, clients, friends, blog readers). 
-	IPython notebooks, more generally notebooks, are natural tools for exploration.
-	IPython notebooks do not provide domain specific functionality for architecture.
+	IPython notebooks are natural tools for exploration but they do not provide domain specific functionality for architecture.
 	
 %Domain-specific IDEs for graphics, games, 3d modeling and Generative Design.
 \subsubsection{Processing.}
