Report: OpenJSCAD, Rosetta, Moving to the Web.

--- a/report.bib
+++ b/report.bib
@@ -249,6 +249,13 @@ year = {2012}
 	howpublished = "retrieved from \url{http://dynamobim.com/}",
 	note = "[Online; accessed 25-November-2015]"
 }
+@misc{kintel2011openscad,
+	title={OpenSCAD, The Programmers Solid 3D CAD Modeller},
+	author={Marius Kintel},
+	howpublished = "retrieved from \url{http://http://www.openscad.org/}",
+	note = "[Online; accessed 25-November-2015]",
+	year={2015}
+}
 @article{marrin2011webgl,
 	title={Webgl specification},
 	author={Marrin, Chris},
