Report: Show page numbers.

--- a/report.tex
+++ b/report.tex
@@ -16,6 +16,8 @@
 \usepackage{listings}
 %%%% Include package for listings
 
+\pagestyle{plain}
+%%%% Use a page style that has page numbers
 
 % 
 % Change the margins
